# liveclaw

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
dev/: liveclaw.dev.toml  setup.sh
docs/: adk-delta-report.md  adk-utilization-matrix.md  closeout-plan.md  deployment-guide.md  design.md  final-parity-closeout-summary.md  m0-defect-register.md  openclaw-zeroclaw-parity-comparison.md  parity-roadmap.md  parity-tracking-board.md  rc-operational-limits.md  rc-signoff-record.md  release-runbook.md  requirements.md  rollback-playbook.md
liveclaw-app/: Cargo.toml
liveclaw-app/src/: agent.rs  config.rs  graph.rs  lib.rs  main.rs  memory.rs  plugins.rs  runner.rs  security.rs  storage.rs  tools.rs
liveclaw-gateway/: Cargo.toml
liveclaw-gateway/src/: lib.rs  pairing.rs  protocol.rs  server.rs
liveclaw-mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
liveclaw-mobile/android/app/: build.gradle.kts
liveclaw-mobile/android/app/src/main/: AndroidManifest.xml
liveclaw-mobile/android/app/src/main/kotlin/com/example/liveclaw_mobile/: MainActivity.kt
liveclaw-mobile/android/app/src/main/res/values/: strings.xml
liveclaw-mobile/ios/Runner/: Info.plist
liveclaw-mobile/ios/Runner.xcodeproj/: project.pbxproj
liveclaw-mobile/lib/: main.dart
liveclaw-mobile/lib/src/models/: gateway_models.dart  session_models.dart
liveclaw-mobile/lib/src/services/: audio_capture_service.dart  audio_playback_service.dart  biometric_gate.dart  liveclaw_gateway_client.dart  pcm_wav.dart  secure_token_vault.dart
liveclaw-mobile/lib/src/state/: voice_session_controller.dart
liveclaw-mobile/lib/src/ui/: liveclaw_app.dart  liveclaw_home_screen.dart
liveclaw-mobile/lib/src/ui/widgets/: action_lane.dart  resonance_orb.dart  transcript_timeline.dart
liveclaw-mobile/linux/: CMakeLists.txt
liveclaw-mobile/linux/runner/: my_application.cc
liveclaw-mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
liveclaw-mobile/macos/Runner/: Info.plist
liveclaw-mobile/macos/Runner.xcodeproj/: project.pbxproj
liveclaw-mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
liveclaw-mobile/macos/Runner/Configs/: AppInfo.xcconfig
liveclaw-mobile/test/: widget_test.dart
liveclaw-mobile/web/: index.html  manifest.json
liveclaw-mobile/windows/: CMakeLists.txt
liveclaw-mobile/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
liveclaw-mobile/windows/runner/: Runner.rc  main.cpp
scripts/: bootstrap_local.sh  generate_e2e_pcm.sh  install_local_release.sh  provider_env_matrix.sh  run_quality_gate.sh  ws_client.sh
scripts/demo/: common.sh  m0_baseline.sh  m1_voice_e2e.sh  m1_voice_e2e_live.sh  m2_secure_sessions.sh  m3_prompt_tool_live.sh  m3_tools_graph.sh  m4_memory_artifacts.sh  m5_runtime_security.sh  m6_rc_signoff.sh  m6_release_flow.sh  run_all.sh  s4_graph_plugin_completeness.sh
tools/ws-client/: index.html
