[package]
name = "liveclaw-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
liveclaw-gateway = { path = "../liveclaw-gateway" }
adk-artifact = { workspace = true }
adk-core = { workspace = true }
adk-realtime = { workspace = true }
adk-session = { workspace = true }
adk-tool = { workspace = true }
adk-runner = { workspace = true }
adk-auth = { workspace = true }
adk-memory = { workspace = true }
adk-graph = { workspace = true }
adk-plugin = { workspace = true }
adk-telemetry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
